2.0 2011-xx-xx
--------------
- Enhancements
	- Node support
	- Separated DOM-related stuff
	- the global Jarvis object now exposes a Framework property for extending the framework
	- used prototype for AssertionInterface and CollectionAssertionInterface so that it can be extended
- Breaking changes
	- DOM stuff has been moved into jarvis.dom.js
	- added jarvis.bootstrap.browser.js; this MUST be included when running Jarvis in the browser

1.3 2011-06-20
--------------
- Changes
	- Added a couple more unit tests
	- Made test.html work under Linux

1.2 2011-06-02
--------------
- Enhancements
	- Added Is.TRUE and Is.FALSE
	- Assert.willThrow() now increments the global assertion count
	- added support for sooper sexy gradient on Opera
- Breaking changes
	- changed <unnamed function> to <anonymous> when converting an anonymous function to its
	  string representation

1.1 2011-05-27
--------------
- Bugfixes
	- correctly print the plural or singular form of "assertion"
	- use \r instead of \n on IE for failure/error messages
- Enhancements
	- added Jarvis.summary()
	- added Jarvis.reset() to reset the global assertionCount variable
	- prettier output using CSS3 (TEXT SHADOW! DROP SHADOW!)
	- bundled diff_match_patch.js in jarvis-min.js
	- bundled sizzle.js in jarvis-min.js
	- bundled stacktrace.js in jarvis-min.js
	- new assertions
		- Is.inDom: determine if a node is present in the DOM
		- Has.text: make an assertion about the text of a DOM node
		- Has.flattenedText: make an assertion about the recursively retrieved text of a DOM node
	- added stack trace output for failures/errors for HtmlReporter
	- added global option Jarvis.showStackTraces to switch stack trace output on and off. The default
	  is on, and is only rendered when using the HtmlReporter. This option is disabled for Opera, because
	  it's insanely slow.
- Breaking changes
	- Contains became Has
	- Contains.not became Has.no
	- Jarvis.reporter became Jarvis.defaultReporter